[package]
name = "findkeepassword"
version = "0.1.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
edition = "2021"
description = "Find a forgotten kdbx 4 password by trying many of them"
rust-version = "1.64.0"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
kdbx-rs = "0.5.1"
rayon = "1.10.0"
